--- a/code/game/game.vcxproj.filters
+++ b/code/game/game.vcxproj.filters
@@ -29,6 +29,12 @@
       <UniqueIdentifier>{0e91520a-1d30-47a6-a251-d58a196c858a}</UniqueIdentifier>
       <Extensions>ico;cur;bmp;dlg;rc2;rct;bin;cnt;rtf;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
+    <Filter Include="speedrun">
+      <UniqueIdentifier>{70a316bc-89a3-4d38-a5ca-0daa378732d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="speedrun\overbounce_detection">
+      <UniqueIdentifier>{da7ee66c-868a-41fd-9f21-d98ad49e8087}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Icarus\BlockStream.cpp">
@@ -415,6 +421,12 @@
     <ClCompile Include="wp_saber.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\speedrun\overbounce_prediction\OverbouncePrediction.cpp">
+      <Filter>speedrun\overbounce_detection</Filter>
+    </ClCompile>
+    <ClCompile Include="..\speedrun\PlayerOverbouncePrediction.cpp">
+      <Filter>speedrun</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Icarus\BlockStream.h">
@@ -629,6 +641,15 @@
     </ClInclude>
     <ClInclude Include="wp_saber.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\speedrun\overbounce_prediction\OverbouncePrediction.hpp">
+      <Filter>speedrun\overbounce_detection</Filter>
+    </ClInclude>
+    <ClInclude Include="..\speedrun\overbounce_prediction\RingBuffer.hpp">
+      <Filter>speedrun\overbounce_detection</Filter>
+    </ClInclude>
+    <ClInclude Include="..\speedrun\PlayerOverbouncePrediction.hpp">
+      <Filter>speedrun</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
