--- a/code/game/game.vcxproj
+++ b/code/game/game.vcxproj
@@ -734,6 +734,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\speedrun\PlayerOverbouncePrediction.cpp" />
+    <ClCompile Include="..\speedrun\strafe_helper\StrafeHelper.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='SHDebug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\ui\gameinfo.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
@@ -1461,6 +1467,7 @@
     <ClInclude Include="..\speedrun\overbounce_prediction\OverbouncePrediction.hpp" />
     <ClInclude Include="..\speedrun\overbounce_prediction\RingBuffer.hpp" />
     <ClInclude Include="..\speedrun\PlayerOverbouncePrediction.hpp" />
+    <ClInclude Include="..\speedrun\strafe_helper\StrafeHelper.hpp" />
     <ClInclude Include="..\ui\gameinfo.h" />
     <ClInclude Include="AI.h" />
     <ClInclude Include="anims.h" />
