--- a/code/game/game.vcxproj
+++ b/code/game/game.vcxproj
@@ -739,7 +739,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\speedrun\strafe_helper\StrafeHelper.cpp">
+    <ClCompile Include="..\speedrun\strafe_helper\strafe_helper.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='SHDebug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\speedrun\strafe_helper_includes.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='SHDebug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -1472,7 +1478,8 @@
     <ClInclude Include="..\speedrun\overbounce_prediction\OverbouncePrediction.hpp" />
     <ClInclude Include="..\speedrun\overbounce_prediction\RingBuffer.hpp" />
     <ClInclude Include="..\speedrun\PlayerOverbouncePrediction.hpp" />
-    <ClInclude Include="..\speedrun\strafe_helper\StrafeHelper.hpp" />
+    <ClInclude Include="..\speedrun\strafe_helper\strafe_helper.h" />
+    <ClInclude Include="..\speedrun\strafe_helper_includes.h" />
     <ClInclude Include="..\ui\gameinfo.h" />
     <ClInclude Include="AI.h" />
     <ClInclude Include="anims.h" />
