Use new speedrun_timer to support no notify print

--- a/code/starwars.vcxproj.filters
+++ b/code/starwars.vcxproj.filters
@@ -596,6 +596,9 @@
     <ClCompile Include="speedrun\speedrun_timer_q3\timer_helper.cpp">
       <Filter>speedrun\speedrun_timer_q3</Filter>
     </ClCompile>
+    <ClCompile Include="speedrun\speedrun_timer_includes.cpp">
+      <Filter>speedrun</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\eax\eax.h">
@@ -1149,6 +1152,9 @@
     </ClInclude>
     <ClInclude Include="speedrun\speedrun_timer_q3\timer_helper.h">
       <Filter>speedrun\speedrun_timer_q3</Filter>
+    </ClInclude>
+    <ClInclude Include="speedrun\speedrun_timer_includes.h">
+      <Filter>speedrun</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
