Add special version info for segmented build

--- a/code/win32/winquake.rc
+++ b/code/win32/winquake.rc
@@ -80,7 +80,7 @@ BEGIN
         BEGIN
             VALUE "Comments", "Originally: Raven Software"
             VALUE "CompanyName", "Originally: Activision Inc"
-            VALUE "FileDescription", "Source port of Jedi Outcast SP"
+            VALUE "FileDescription", "Source port of Jedi Outcast SP (segmented)"
             VALUE "FileVersion",  VERSION_STRING
             VALUE "InternalName", "JK2SP"
             VALUE "LegalCopyright", "Originally: Raven Software, Activision Inc"
