--- a/code/starwars.vcxproj.filters
+++ b/code/starwars.vcxproj.filters
@@ -437,112 +437,148 @@
     <ClCompile Include="ui\ui_syscalls.cpp">
       <Filter>UI Source</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcapimin.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jaricom.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jccoefct.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcapimin.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jccolor.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcapistd.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcdctmgr.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcarith.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jchuff.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jccoefct.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcinit.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jccolor.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcmainct.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcdctmgr.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcmarker.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jchuff.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcmaster.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcinit.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcomapi.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcmainct.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcparam.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcmarker.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcphuff.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcmaster.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcprepct.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcomapi.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jcsample.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcparam.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jctrans.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcphuff.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdapimin.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcprepct.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdapistd.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jcsample.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdatadst.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdapimin.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdatasrc.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdapistd.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdcoefct.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdarith.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdcolor.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdatasrc.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jddctmgr.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdcoefct.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdhuff.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdcolor.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdinput.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jddctmgr.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdmainct.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdhuff.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdmarker.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdinput.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdmaster.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdmainct.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdpostct.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdmarker.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdsample.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdmaster.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jdtrans.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdmerge.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jerror.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdphuff.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jfdctflt.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdpostct.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jidctflt.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jdsample.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jmemmgr.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jerror.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jmemnobs.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jfdctflt.c">
       <Filter>JPEG</Filter>
     </ClCompile>
-    <ClCompile Include="jpeg-6\jutils.cpp">
+    <ClCompile Include="jpeg\libjpeg-turbo\jfdctfst.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jfdctint.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jidctflt.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jidctfst.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jidctint.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jidctred.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jmemmgr.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jmemnobs.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jquant1.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jquant2.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jutils.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\jsimd_none.c">
+      <Filter>JPEG</Filter>
+    </ClCompile>
+    <ClCompile Include="jpeg\libjpeg-turbo\simd\i386\jsimd.c">
       <Filter>JPEG</Filter>
     </ClCompile>
     <ClCompile Include="encryption\buffer.cpp">
@@ -976,39 +1012,6 @@
     <ClInclude Include="ui\ui_shared.h">
       <Filter>UI Source\UI Headers</Filter>
     </ClInclude>
-    <ClInclude Include="jpeg-6\jchuff.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jconfig.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jdct.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jdhuff.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jerror.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jinclude.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jmemsys.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jmorecfg.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jpegint.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jpeglib.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
-    <ClInclude Include="jpeg-6\jversion.h">
-      <Filter>JPEG</Filter>
-    </ClInclude>
     <ClInclude Include="encryption\buffer.h">
       <Filter>encryption</Filter>
     </ClInclude>
@@ -1156,6 +1159,140 @@
     <ClInclude Include="speedrun\speedrun_timer_includes.h">
       <Filter>speedrun</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jccolor-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jccolor-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jccolor-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcgray-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcgray-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcgray-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jchuff-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcphuff-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcsample-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcsample-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jcsample-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdcolor-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdcolor-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdcolor-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdmerge-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdmerge-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdmerge-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdsample-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdsample-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jdsample-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctflt-3dn.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctflt-sse.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctfst-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctfst-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctint-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctint-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jfdctint-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctflt-3dn.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctflt-sse.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctflt-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctfst-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctfst-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctint-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctint-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctint-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctred-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jidctred-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jquant-3dn.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jquantf-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jquanti-avx2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jquanti-sse2.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jquant-mmx.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jquant-sse.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
+    <CustomBuild Include="jpeg\libjpeg-turbo\simd\i386\jsimdcpu.asm">
+      <Filter>JPEG</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <Library Include="smartheap\HAW32M.LIB">
