--- a/code/starwars.vcxproj
+++ b/code/starwars.vcxproj
@@ -1257,6 +1257,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../server/exe_headers.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="wuffs-mirror-release-c\release\c\wuffs-v0.3.c">
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
+      <PreprocessorDefinitions>WUFFS_CONFIG__MODULES;WUFFS_CONFIG__MODULE__BASE;WUFFS_CONFIG__MODULE__CRC32;WUFFS_IMPLEMENTATION</PreprocessorDefinitions>
+    </ClCompile>
     <ClCompile Include="zlib\adler32.c" />
     <ClCompile Include="zlib\crc32.c" />
     <ClCompile Include="zlib\inffast.c" />
