--- a/code/game/game.vcxproj
+++ b/code/game/game.vcxproj
@@ -749,7 +749,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\speedrun\strafe_helper_includes.cpp">
+    <ClCompile Include="..\speedrun\strafe_helper_customization.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='SHDebug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -1484,6 +1484,7 @@
     <ClInclude Include="..\speedrun\PlayerOverbouncePrediction.hpp" />
     <ClInclude Include="..\speedrun\speedrun_timer_q3\timer_helper.h" />
     <ClInclude Include="..\speedrun\strafe_helper\strafe_helper.h" />
+    <ClInclude Include="..\speedrun\strafe_helper\strafe_helper_customization.h" />
     <ClInclude Include="..\speedrun\strafe_helper_includes.h" />
     <ClInclude Include="..\ui\gameinfo.h" />
     <ClInclude Include="AI.h" />
