Added a condition to check is the Randomizer is enabled. This way, this version of the game can be added to SpeedOutcast to have a single executable for both the base game and the Randomizer.

--- a/code/base/jk2config.cfg
+++ b/code/base/jk2config.cfg
@@ -69,7 +69,7 @@ bind MOUSE5 "+force_lightning"
 bind DOWNARROW "+back"
 bind LEFTARROW "+left"
 bind RIGHTARROW "+right"
-seta cg_setSeed "7898612456"
+seta cg_setSeed "2852812379"
 seta cg_useSetSeed "0"
 seta cg_drawSeed "1"
 seta r_weatherScale "1"
@@ -308,3 +308,4 @@ seta in_midiport "1"
 seta in_midi "0"
 seta sp_language "1"
 seta com_maxfps "125"
+seta cg_enableRandomizer "1"
