Moved seed handling to RandomizerUtils class, applied this during map load and removed some rand() and srand() calls to ensure consistent results. Also commented out some checks against items spawning inside geometry - we have to accept this will happen or we will break on a lot of spawns

--- a/code/game/game.vcxproj
+++ b/code/game/game.vcxproj
@@ -718,6 +718,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='SHDebug|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='SHDebug|Win32'">common_headers.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="..\randomizer\RandomizerUtils.cpp">
+      <DeploymentContent>false</DeploymentContent>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\smartheap\SMRTHEAP.C">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -1477,6 +1481,7 @@
     <ClInclude Include="..\qcommon\sstring.h" />
     <ClInclude Include="..\qcommon\stripPublic.h" />
     <ClInclude Include="..\qcommon\tags.h" />
+    <ClInclude Include="..\randomizer\RandomizerUtils.h" />
     <ClInclude Include="..\renderer\mdx_format.h" />
     <ClInclude Include="..\renderer\tr_types.h" />
     <ClInclude Include="..\speedrun\overbounce_prediction\OverbouncePrediction.hpp" />
