--- a/code/starwars.vcxproj
+++ b/code/starwars.vcxproj
@@ -337,6 +337,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\server\exe_headers.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="client\cl_overbounce.cpp" />
     <ClCompile Include="client\cl_parse.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='FinalBuild|Win32'">..\server\exe_headers.h</PrecompiledHeaderFile>
@@ -1283,6 +1284,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="speedrun\overbounce_prediction\overbounce_prediction.cpp" />
     <ClCompile Include="speedrun\speedrun_timer_includes.cpp" />
     <ClCompile Include="speedrun\speedrun_timer_q3\timer.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -1629,6 +1631,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="speedrun\overbounce_prediction\overbounce_prediction.hpp" />
     <ClInclude Include="speedrun\speedrun_timer_includes.h" />
     <ClInclude Include="speedrun\speedrun_timer_q3\timer.h" />
     <ClInclude Include="speedrun\speedrun_timer_q3\timer_helper.h" />
